tests/parsing/extra_space_at_line_end_empty_line/stderr.golden
error: extra space at line end
bus.fbd +4:1
   |
 4 |  
   | ^
